* Translate in english * Add last_date selection

--- a/scrapydweb/templates/scrapydweb/monitoring.html
+++ b/scrapydweb/templates/scrapydweb/monitoring.html
@@ -42,7 +42,7 @@
                 <a class="github-button" href="{{ github_link }}">Report an issue</a>
             </div>
         </div>
-        <p>Cette page permet le suivit et le monitoring d'un spider en affichant son historique.</p>
+        <p>This page allow the historical monitoring of a specific spider.</p>
 
         <h2>Scraping historic</h2>
         {{ graphHTML | safe }}
