* Add the node to the thumbnails url

--- a/scrapydweb/templates/scrapydweb/node_reports.html
+++ b/scrapydweb/templates/scrapydweb/node_reports.html
@@ -264,7 +264,7 @@ var Main = {
     loadThumbnail(row){
       row.thumbnail = `/static/images/thumbnails/${row.spider}.png`
        axios
-           .get(`/1/thumbnail/${row.spider}`)
+           .get(`/{{ node }}/thumbnail/${row.spider}`)
            .then(response=>{
                let abscissa = []
                let ordinate = []
