* Add the node to the thumbnails url

--- a/scrapydweb/templates/scrapydweb/node_reports.html
+++ b/scrapydweb/templates/scrapydweb/node_reports.html
@@ -296,7 +296,7 @@ Vue.component('line-chart', {
   extends: VueChartJs.Line,
   props: ['spider'],
   mounted () {
-        axios.get(`/1/thumbnail/${this.spider}`).then(response => {
+        axios.get(`/{{ node }}/thumbnail/${this.spider}`).then(response => {
             let abscissa = []
             let ordinate = []
             response.data.forEach((line)=>{
