* Change report button

--- a/scrapydweb/templates/scrapydweb/monitoring.html
+++ b/scrapydweb/templates/scrapydweb/monitoring.html
@@ -39,11 +39,7 @@
                 <h1>Monitoring view for the spider '{{ spider }}' [<a href="{{ log_url }}">logs</a>]</h1>
             </div>
             <div class="el-col el-col-4">
-{#                <a class="github-button" href="{{ github_link }}">MousseClick©</a>#}
-                <button type="button" class="btn btn-outline-secondary">
-                    <img src="../../static/v140/icon/mousseClick.png" alt="MousseClick.png">
-                    MousseClick©
-                </button>
+                <a class="github-button" href="{{ github_link }}">Report an issue</a>
             </div>
         </div>
         <p>This page allow the historical monitoring of a specific spider.</p>
