--- a/scrapydweb/templates/base.html
+++ b/scrapydweb/templates/base.html
@@ -289,7 +289,7 @@
     </ul>
     </div>
     <div class="github">
-    <a id="scrapydweb_version" class="request" href="https://pypi.org/project/scrapydweb/" target="_blank">v{{ SCRAPYDWEB_VERSION }}</a>
+    <a id="scrapydweb_version" class="request" href="https://pypi.org/project/scrapydweb/" target="_blank">RetailShake - v{{ SCRAPYDWEB_VERSION }}</a>
     <a class="github-button" href="{{ GITHUB_URL.replace('/scrapydweb', '') }}" aria-label="@my8100 on GitHub">GitHub</a>
     <div>
     <!-- <ul id="links"> -->
