Fix bug for scrapyd v1.5.0

--- a/scrapydweb/templates/scrapydweb/jobs.html
+++ b/scrapydweb/templates/scrapydweb/jobs.html
@@ -31,7 +31,7 @@
 <h2>
   <a class="link" target="_blank" href="{{ url }}">Get the list of jobs of all projects in database.</a>
   <label title="switch to non-database view">
-    <a class="button normal" href="{{ url_jobs_classic }}">Classic</a>
+    <a class="button normal" href="{{ url_jobs_classic }}">Classic View</a>
   </label>
   <label title="schedule a spider run">
     <a class="button safe narrow" href="{{ url_schedule }}">+</a>
