--- a/scrapydweb/templates/scrapydweb/jobs_mobileui.html
+++ b/scrapydweb/templates/scrapydweb/jobs_mobileui.html
@@ -135,7 +135,7 @@
 
   <tr>
     <th colspan="{{ colspan }}" class="category-head">Finished ({{ finished_jobs|length }})
-    <strong style="color: red;">DESC</strong>
+    <strong style="color: red;">sorted DESC</strong>
     </th>
   </tr>
 {% for job in finished_jobs %}
