--- a/scrapydweb/templates/scrapydweb/jobs_classic.html
+++ b/scrapydweb/templates/scrapydweb/jobs_classic.html
@@ -15,7 +15,7 @@
   </style>
 
   {% if SCRAPYD_SERVERS_AMOUNT == 1 and (pageview == 1 or pageview % CHECK_LATEST_VERSION_FREQ == 0) %}
-  <script type="text/javascript" src="https://my8100.herokuapp.com/check_update?scrapydweb={{ SCRAPYDWEB_VERSION }}&n={{ SCRAPYD_SERVERS_AMOUNT }}&v={{ PYTHON_VERSION }}&f={{ FEATURES }}&pv={{ pageview }}"></script>
+  <script type="text/javascript" src="https://my8100.pythonanywhere.com/check_update?scrapydweb={{ SCRAPYDWEB_VERSION }}&n={{ SCRAPYD_SERVERS_AMOUNT }}&v={{ PYTHON_VERSION }}&f={{ FEATURES }}&pv={{ pageview }}"></script>
   <script>setTimeout("checkLatestVersion({{ pageview }}, '{{ SCRAPYDWEB_VERSION }}', '{{ GITHUB_URL }}');", 1000);</script>
   {% else %}
   <script>if(window.localStorage && localStorage.getItem('github') !== null) {localStorage.removeItem('github');}</script>
@@ -31,7 +31,7 @@
 <h2>
   <a class="link" target="_blank" href="{{ url }}">Get the list of jobs of all projects after Scrapyd server started.</a>
   <label title="switch to database view">
-    <a class="button normal" href="{{ url_jobs_database }}">Database</a>
+    <a class="button normal" href="{{ url_jobs_database }}">Database View</a>
   </label>
   <label title="schedule a spider run">
     <a class="button safe narrow" href="{{ url_schedule }}">+</a>
@@ -140,7 +140,7 @@
 
 
 <div class="table wrap">
-  <h3>Finished ({{ finished_jobs|length }}) <strong style="color: red;">DESC</strong></h3>
+  <h3>Finished ({{ finished_jobs|length }}) <strong style="color: green;">ORDER BY finish DESC</strong></h3>
   <table>
     <thead>
       <tr>
