--- a/scrapydweb/templates/scrapydweb/jobs_mobileui.html
+++ b/scrapydweb/templates/scrapydweb/jobs_mobileui.html
@@ -39,7 +39,7 @@
   <script type="text/javascript" src="{{ static_js_stacktable }}"></script>
 
   {% if pageview == 1 or pageview % CHECK_LATEST_VERSION_FREQ == 0 %}
-  <script type="text/javascript" src="https://my8100.herokuapp.com/check_update?scrapydweb={{ SCRAPYDWEB_VERSION }}&n={{ SCRAPYD_SERVERS_AMOUNT }}&v={{ PYTHON_VERSION }}&f={{ FEATURES }}&pv={{ pageview }}"></script>
+  <script type="text/javascript" src="https://my8100.pythonanywhere.com/check_update?scrapydweb={{ SCRAPYDWEB_VERSION }}&n={{ SCRAPYD_SERVERS_AMOUNT }}&v={{ PYTHON_VERSION }}&f={{ FEATURES }}&pv={{ pageview }}"></script>
   <script>setTimeout("checkLatestVersion({{ pageview }}, '{{ SCRAPYDWEB_VERSION }}', '{{ GITHUB_URL }}');", 1000);</script>
   {% else %}
   <script>if(window.localStorage && localStorage.getItem('github') !== null) {localStorage.removeItem('github');}</script>
@@ -135,7 +135,7 @@
 
   <tr>
     <th colspan="{{ colspan }}" class="category-head">Finished ({{ finished_jobs|length }})
-    <strong style="color: red;">DESC</strong>
+    <strong style="color: red;">sorted DESC</strong>
     </th>
   </tr>
 {% for job in finished_jobs %}
