Support deleting timer task results automatically

--- a/scrapydweb/templates/scrapydweb/settings.html
+++ b/scrapydweb/templates/scrapydweb/settings.html
@@ -95,6 +95,9 @@
       <ul class="collapse">
         <li><div class="title"><h4>scheduler.state: {{ scheduler_state }}</h4></div></li>
         <li><div class="title"><h4>JOBS_SNAPSHOT_INTERVAL = {{ JOBS_SNAPSHOT_INTERVAL }}</h4></div></li>
+        <li><div class="title"><h4>CHECK_TASK_RESULT_INTERVAL = {{ CHECK_TASK_RESULT_INTERVAL }}</h4></div></li>
+        <li><div class="title"><h4>KEEP_TASK_RESULT_LIMIT = {{ KEEP_TASK_RESULT_LIMIT }}</h4></div></li>
+        <li><div class="title"><h4>KEEP_TASK_RESULT_WITHIN_DAYS = {{ KEEP_TASK_RESULT_WITHIN_DAYS }}</h4></div></li>
       </ul>
     </div>
 
