--- a/scrapydweb/templates/500.html
+++ b/scrapydweb/templates/500.html
@@ -18,6 +18,8 @@
   <tr><th>Python</th><td>{{ python_version }}</td></tr>
   <tr><th>ScrapydWeb</th><td>{{ scrapydweb_version }}</td></tr>
   <tr><th>LogParser</th><td>{{ logparser_version }}</td></tr>
+  <tr><th>Scrapy</th><td>{{ scrapy_version }}</td></tr>
+  <tr><th>Scrapyd</th><td>{{ scrapyd_version }}</td></tr>
   <tr><th>Scrapyd servers amount</th><td>{{ scrapyd_servers_amount }}</td></tr>
   <tr><th>User-Agent</th><td>{{ request.user_agent }}</td></tr>
   <tr><th>Request Method</th><td>{{ request.method }}</td></tr>
@@ -44,6 +46,8 @@
 - **Python:** {{ python_version }}
 - **ScrapydWeb:** {{ scrapydweb_version }}
 - **LogParser:** {{ logparser_version }}
+- **Scrapy:** {{ scrapy_version }}
+- **Scrapyd:** {{ scrapyd_version }}
 - **Scrapyd servers amount:** {{ scrapyd_servers_amount }}
 - **User-Agent:** {{ request.user_agent }}
 - **Request Method:** {{ request.method }}
